tests/semantic_error/gv2_local_nome_param.g
/* erro: var local no bloco externo da funcao com nome de parametro */
funcao [
  f(a : int) : int
  [ a : int; ]
  {
    a = 1;
    retorne a;
  }
]

principal
{
  escreva f(2);
  novalinha;
}
